# orangestarsim

./: LICENSE.txt  README.md  pyproject.toml
src/orangestarsim/: __about__.py  people.py  results.py  sim.py
src/orangestarsim/demographics/: births.py  deaths.py  pregnancy.py
src/orangestarsim/diseases/: sir.py
src/orangestarsim/distributions/: __init__.py  base.py  bernoulli.py  choice.py  constant.py  expon.py  lognormal_ex.py  lognormal_im.py  normal.py  poisson.py  randint.py  random.py  uniform.py  weibull.py
src/orangestarsim/interventions/: campaign_screening.py  campaign_vx.py  fixed_treatment.py  routine_screening.py  routine_triage.py  routine_vx.py
src/orangestarsim/network/: random.py
tests/: __init__.py  test_network.py  test_people.py  test_results.py  test_sir.py
